added basic logging capability

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ regex = "1.5"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 actix-web = "4.0"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
